# minify4j

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
docs/: ABI.md  RELEASE.md
minify4j-wasm/: Cargo.toml
minify4j-wasm/src/: abi.rs  css.rs  error.rs  js.rs  lib.rs
scripts/: build-wasm.sh  release-local.sh
src/main/java/io/github/tienquanutc/minify4j/: ExecutionMode.java  Minify4j.java  Minify4jException.java  MinifyOptions.java
src/main/resources/wasm/: minify4j.wasm
src/test/java/io/github/tienquanutc/minify4j/: Minify4jTest.java
